--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@
 
 html {
   font-size: 20px;
+  scroll-behavior: smooth;
 }
 
 #Grid-container {
@@ -77,6 +78,10 @@ html {
   font-size: 1.3rem;
   -ms-grid-columns: (minmax(216px, auto))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(216px, auto));
+}
+
+#Header-container #Menu-header-grid {
+  display: none;
 }
 
 #Header-container #Logo-link {
@@ -170,19 +175,8 @@ html {
 #Content-container #Video-container #Pizza-video {
   max-width: 800px;
   margin-bottom: 10vh;
-}
-
-#Content-container #Tossing-pizza-container {
-  width: 40vw;
-}
-
-#Content-container #Tossing-pizza-container #Tossing-pizza {
-  width: 100%;
-  position: relative;
-  left: 30vw;
-  margin-bottom: 10vh;
-  border: #000000 solid 1.2px;
-  border-radius: 5px;
+  border: solid 1px #796F5B;
+  border-radius: 3px;
 }
 
 #Content-container #Opening-hours {
@@ -193,6 +187,13 @@ html {
   font-family: "Montserrat", sans-serif;
   font-size: 3.5rem;
   text-align: center;
+  -webkit-animation: Move 1.5s;
+          animation: Move 1.5s;
+}
+
+.Link-to-menu-headers {
+  position: relative;
+  top: -32vh;
 }
 
 .Menu-headers {
@@ -202,8 +203,8 @@ html {
   color: #000000;
   font-size: 1.7rem;
   border-bottom: solid 2px #000000;
-  -webkit-animation: Move 2s;
-          animation: Move 2s;
+  -webkit-animation: Move 1.5s;
+          animation: Move 1.5s;
 }
 
 .Menu-grid {
@@ -239,7 +240,7 @@ html {
   width: 340px;
   height: 250px;
   background-color: white;
-  border: 1.2px solid #000000;
+  border: 1.2px solid #796F5B;
   border-radius: 5px;
   text-align: center;
   -webkit-box-align: center;
@@ -248,8 +249,8 @@ html {
 }
 
 .Menu-grid .Buy-now-button {
-  -webkit-box-shadow: 1px 1px 2px #000000;
-          box-shadow: 1px 1px 2px #000000;
+  -webkit-box-shadow: 1px 1px 1px #000000;
+          box-shadow: 1px 1px 1px #000000;
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 5px;
@@ -259,6 +260,7 @@ html {
   margin: 0% 30% 5% 30%;
   font-family: "Montserrat", sans-serif;
   color: #A73127;
+  background-color: rgba(121, 111, 91, 0.1);
 }
 
 .Menu-grid .Menu-images {
@@ -282,7 +284,7 @@ html {
 
 .Menu-grid .Menu-prices {
   font-family: "Raleway", sans-serif;
-  color: #A73127;
+  color: #000000;
   font-size: 1.1rem;
   display: inline-block;
   margin-bottom: 10px;
@@ -303,8 +305,8 @@ html {
   margin: 7vh 5vw 0vh 5vw;
   padding-bottom: 2vh;
   border-bottom: solid 2px #000000;
-  -webkit-animation: Move 2s;
-          animation: Move 2s;
+  -webkit-animation: Move 1.5s;
+          animation: Move 1.5s;
 }
 
 #About-us-grid {
@@ -319,8 +321,8 @@ html {
   -webkit-column-gap: 4vw;
           column-gap: 4vw;
   row-gap: 5vh;
-  -webkit-animation: Move 2s;
-          animation: Move 2s;
+  -webkit-animation: Move 1.5s;
+          animation: Move 1.5s;
   -webkit-animation: Fade 3s;
           animation: Fade 3s;
 }
@@ -414,21 +416,42 @@ html {
   #Header-container #Phonenumber-link {
     display: block;
   }
+  #Header-container #Menu-header-grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: 5vh;
+        grid-template-rows: 5vh;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    background: #A73127;
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    justify-items: center;
+    font-family: "Montserrat", sans-serif;
+    -webkit-box-shadow: 1px 0px 1px #796F5B;
+            box-shadow: 1px 0px 1px #796F5B;
+    font-size: 1.1rem;
+  }
+  #Header-container #Menu-header-grid .Active-link {
+    border-bottom: solid 2px #F2E8D9;
+  }
   #Phonenumber-text {
     display: none;
   }
-  #Content-container #Hungry-banner {
+  #Grid-container #Content-container #Hungry-banner {
     height: 40vh;
   }
-  #Content-container #Hungry-banner #Hungry-text {
+  #Grid-container #Content-container #Hungry-banner #Hungry-text {
     position: absolute;
     top: 13vh;
     left: 33%;
   }
-  #Content-container #Opening-hours {
+  #Grid-container #Content-container #Opening-hours {
     font-size: 2.0rem;
   }
-  #Content-container #Video-container #Pizza-video {
+  #Grid-container #Content-container #Video-container #Pizza-video {
     max-width: 100vw;
   }
   #Pizza-menu .Menu-grid .Pizza-item-container .Menu-images {
@@ -462,13 +485,17 @@ html {
   #Header-container #Phonenumber-link {
     display: block;
   }
+  .Link-to-menu-headers {
+    position: relative;
+    top: -29vh;
+  }
   #Phonenumber-text {
     display: none;
   }
-  #Content-container #Hungry-banner {
+  #Grid-container #Content-container #Hungry-banner {
     height: 40vh;
   }
-  #Content-container #Hungry-banner #Hungry-text {
+  #Grid-container #Content-container #Hungry-banner #Hungry-text {
     position: absolute;
     top: 6vh;
     left: 17%;
@@ -476,16 +503,17 @@ html {
     height: auto;
     font-size: 0.8rem;
   }
-  #Content-container #Hungry-banner #Hungry-text #Hungry-question {
+  #Grid-container #Content-container #Hungry-banner #Hungry-text #Hungry-question {
     font-size: 1.2rem;
   }
-  #Content-container #Video-container #Pizza-video {
+  #Grid-container #Content-container #Hungry-banner #Video-container #Pizza-video {
     max-width: 100vw;
+    border: none;
   }
-  #Content-container #Homepage-text {
+  #Grid-container #Content-container #Hungry-banner #Homepage-text {
     margin: 5vh 10vw 5vh 10vw;
   }
-  #Content-container #Opening-hours {
+  #Grid-container #Content-container #Hungry-banner #Opening-hours {
     font-size: 1.8rem;
     margin: 0vh 10vw 5vh 10vw;
   }
@@ -505,7 +533,7 @@ html {
 
 @media (max-width: 375px) {
   #Header-container {
-    top: -105px;
+    top: -130px;
   }
   #Content-container #Hungry-banner {
     height: 40vh;
@@ -520,6 +548,12 @@ html {
   }
   #Content-container #Hungry-banner #Hungry-text #Hungry-question {
     font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 330px) {
+  #Header-container {
+    top: -85px;
   }
 }
 /*# sourceMappingURL=style.css.map */
