--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,9 @@ html {
 #Grid-container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 100vw;
-      grid-template-columns: 100vw;
+  max-width: 100vw;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   -ms-grid-rows: minmax(10vh, auto) minmax(85vh, auto) minmax(5vh, auto);
       grid-template-rows: minmax(10vh, auto) minmax(85vh, auto) minmax(5vh, auto);
   background-color: #F2E8D9;
@@ -95,10 +96,60 @@ html {
   display: none;
 }
 
+#Header-container #Link-grid-1 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr 2px;
+      grid-template-rows: 1fr 2px;
+}
+
+#Header-container #Link-grid-1 .border-div {
+  visibility: hidden;
+  width: 100%;
+  background-color: #F2E8D9;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+#Header-container #Link-grid-1:hover .border-div {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
+#Header-container #Link-grid-2 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr 2px;
+      grid-template-rows: 1fr 2px;
+}
+
+#Header-container #Link-grid-2 .border-div {
+  visibility: hidden;
+  width: 100%;
+  background-color: #F2E8D9;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+#Header-container #Link-grid-2:hover .border-div {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
+#Header-container a {
+  position: relative;
+}
+
 #Header-container a:link {
   color: #F2E8D9;
   text-decoration: none;
-  padding: 0px 2px 0px 2px;
+  padding: 0px 4px 2px 2px;
 }
 
 #Header-container a:visited {
@@ -175,13 +226,12 @@ html {
 #Content-container #Video-container #Pizza-video {
   max-width: 800px;
   margin-bottom: 10vh;
-  border: solid 1px #796F5B;
   border-radius: 3px;
 }
 
 #Content-container #Opening-hours {
   padding: 10vh 7vw 10vh 7vw;
-  margin: 15vh 10vw 15vh 10vw;
+  margin: 7vh 10vw 15vh 10vw;
   border-bottom: solid 2px #000000;
   border-top: solid 2px #000000;
   font-family: "Montserrat", sans-serif;
@@ -297,19 +347,24 @@ html {
   color: #796F5B;
 }
 
-#Page-header {
+#About-us-page {
+  background-color: #F2E8D9;
+}
+
+#About-us-page #About-us-container #Page-header {
   font-family: "Montserrat", sans-serif;
   font-size: 1.7rem;
   color: #000000;
   text-align: center;
-  margin: 7vh 5vw 0vh 5vw;
+  margin: 0vh 5vw 0vh 5vw;
   padding-bottom: 2vh;
+  padding-top: 7vh;
   border-bottom: solid 2px #000000;
   -webkit-animation: Move 1.5s;
           animation: Move 1.5s;
 }
 
-#About-us-grid {
+#About-us-page #About-us-container #About-us-grid {
   display: -ms-grid;
   display: grid;
   margin: 15vh 10vw 10vh 10vw;
@@ -327,15 +382,34 @@ html {
           animation: Fade 3s;
 }
 
-#About-us-grid .About-us-header {
-  padding: 5px 1px 7px 1px;
+#About-us-page #About-us-container #About-us-grid .About-us-header {
+  padding: 0px 1px 7px 1px;
   margin-bottom: 5px;
   border-bottom: solid 2px #000000;
   font-family: "Montserrat", sans-serif;
   color: #000000;
 }
 
-#About-us-grid .About-us-text {
+#About-us-page #About-us-container #About-us-grid #About-us-italics {
+  font-style: italic;
+}
+
+#About-us-page #About-us-container #About-us-grid #Who-are-we-image {
+  width: 100%;
+}
+
+#About-us-page #About-us-container #About-us-grid #Pizza-on-table-image {
+  width: 100%;
+}
+
+#About-us-page #About-us-container #About-us-grid .About-us-images {
+  border: 1px solid #796F5B;
+  border-radius: 5px;
+  -webkit-box-shadow: 1px 1px 2px #796F5B;
+          box-shadow: 1px 1px 2px #796F5B;
+}
+
+#About-us-page #About-us-container .About-us-text {
   padding-left: 4px;
   font-family: "Raleway", sans-serif;
   color: #796F5B;
@@ -343,23 +417,19 @@ html {
   padding-top: 5px;
 }
 
-#About-us-grid #About-us-italics {
-  font-style: italic;
+#About-us-page #About-us-container #About-us-grid-2 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  justify-items: center;
+  text-align: center;
+  margin: 0 10vw 10vh 10vw;
 }
 
-#About-us-grid #Who-are-we-image {
-  width: 100%;
-}
-
-#About-us-grid #Pizza-on-table-image {
-  width: 100%;
-}
-
-#About-us-grid .About-us-images {
-  border: 1px solid #796F5B;
-  border-radius: 5px;
-  -webkit-box-shadow: 1px 1px 2px #796F5B;
-          box-shadow: 1px 1px 2px #796F5B;
+#About-us-page #About-us-container #About-us-grid-2 #Chefs-hat-image {
+  width: 50px;
+  margin: 2px;
 }
 
 #Location {
@@ -378,22 +448,25 @@ html {
 }
 
 #Location #Maps-location {
-  padding: 5vh 4vw 10vh 4vw;
-  margin: 0vh 6vw 0vh 6vw;
+  margin: 5vh 10vw 10vh 10vw;
   width: 80%;
   height: 500px;
+  border: 1px solid #796F5B;
+  border-radius: 5px;
+  -webkit-box-shadow: 1px 1px 2px #796F5B;
+          box-shadow: 1px 1px 2px #796F5B;
 }
 
 #Footer-container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 45vw 45vw;
-      grid-template-columns: 45vw 45vw;
+  -ms-grid-columns: (minmax(40vw, auto))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(40vw, auto));
   -ms-grid-rows: 1fr;
       grid-template-rows: 1fr;
   background-color: #796F5B;
   font-size: 0.8rem;
-  padding: 5vh 5vw 5vh 5vw;
+  padding: 5vh 3vw 5vh 3vw;
   font-family: "Raleway", sans-serif;
 }
 
@@ -472,7 +545,7 @@ html {
 
 @media (max-width: 430px) {
   #Header-container {
-    top: -128px;
+    top: -125px;
     -ms-grid-rows: 17vh (6vh)[3];
         grid-template-rows: 17vh repeat(3, 6vh);
     -ms-grid-columns: 1fr;
@@ -508,7 +581,6 @@ html {
   }
   #Grid-container #Content-container #Hungry-banner #Video-container #Pizza-video {
     max-width: 100vw;
-    border: none;
   }
   #Grid-container #Content-container #Hungry-banner #Homepage-text {
     margin: 5vh 10vw 5vh 10vw;
@@ -520,11 +592,17 @@ html {
   #Pizza-menu .Menu-grid .Pizza-item-container .Menu-images {
     opacity: 1.0;
   }
-  #About-us-grid {
+  #About-us-container #About-us #About-us-grid {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    -ms-grid-rows: (1fr)[4];
-        grid-template-rows: repeat(4, 1fr);
+    -ms-grid-rows: 35vh 60vh 60vh 35vh;
+        grid-template-rows: 35vh 60vh 60vh 35vh;
+  }
+  #About-us-container #About-us #About-us-grid-2 {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr 3fr;
+        grid-template-rows: 1fr 3fr;
   }
   #Location #Maps-location {
     height: 400px;
@@ -533,10 +611,10 @@ html {
 
 @media (max-width: 375px) {
   #Header-container {
-    top: -130px;
+    top: -124px;
   }
   #Content-container #Hungry-banner {
-    height: 40vh;
+    height: 35vh;
   }
   #Content-container #Hungry-banner #Hungry-text {
     position: absolute;
@@ -553,7 +631,7 @@ html {
 
 @media (max-width: 330px) {
   #Header-container {
-    top: -85px;
+    top: -90px;
   }
 }
 /*# sourceMappingURL=style.css.map */
